# nba_moa_agents

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  railway.json
.cursor/: mcp.json
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260520_000001_init_postgres_pgvector.py
backend/app/: __init__.py  main.py
backend/app/api/: routes.py  runner.py  schemas.py
backend/app/core/: config.py  credentials.py  logging.py  openrouter.py
backend/app/db/: __init__.py  base.py  migrate.py  session.py
backend/app/eval/: __init__.py  models.py  pricing.py  repository.py  schemas.py  tracker.py
backend/app/mcp/: client.py
backend/app/memory/: __init__.py  chunking.py  embeddings.py  models.py  repository.py  schemas.py  service.py  tool.py
backend/app/moa/: citations.py  graph.py  llm.py  open_query.py  state.py
backend/app/moa/agents/: base.py  editor.py
backend/app/moa/agents/proposers/: __init__.py  injuries.py  news.py  scores.py  social.py  stats.py
backend/app/moa/agents/refiners/: __init__.py  analyst.py  narrative.py
backend/scripts/: demo.py  migrate_sqlite_to_postgres.py
backend/tests/: conftest.py  test_citations.py  test_eval.py  test_graph_workflow.py  test_mcp_servers.py  test_memory.py  test_smoke.py
docs/: architecture.md  case-study.md  deployment.md  llmops.md  postgres-migration-runbook.md  testing.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vercel.json  vite.config.ts
frontend/src/: App.tsx  api.ts  credentials.ts  index.css  vite-env.d.ts
mcp_servers/espn/: README.md  server.py
mcp_servers/nba_stats/: README.md  server.py
(+10 files in other folders)
